Correccion imagenes, listas y prettier

--- a/index.html
+++ b/index.html
@@ -1,89 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css/style.css">
     <title>Document</title>
 </head>
-
 <body>
-    <header class="encabezado">
-        <nav class="navegacion">
-            <h3 class="logo">WebStudio</h3>
-            <div class="navegacion-pagina">
+    <header>
+        <nav>
+            <a href="#">WebStudio</a>
+            <div>
                 <h5>Estudio</h5>
-                <h5 class="portafolio">Portafolio</h5>
+                <h5>Portafolio</h5>
                 <h5>Contactos</h5>
             </div>
-            <a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a class="tel" href="tel:+525555296000">+52 55 5529 6000</a>
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+525555296000">+52 55 5529 6000</a></li>
+            </ul>
         </nav>
         <h1>SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
-        <button type="button" class="boton principal">
+        <button type="button">
             solicite nuestro servicio
         </button>
     </header>
     <main>
         <section>
             <!-- Beneficios de trabajar con nosotros -->
-            <article class="Beficios">
-                <div>
-                    <h5>ATENCIÓN A LOS DETALLES</h5>
-                    <p>
-                        Nos adentramos en todos los detalles y procesos de su negocio, para así desarrollar una solución
-                        a su medida.
-                    </p>
-                </div>
-                <div>
-                    <h5>PUNTUALIDAD</h5>
-                    <p>
-                        Con nosotros, usted puede sentirse seguro y protegido. Un principio importante de la empresa:
-                        respetar su tiempo y respetar los plazos acordados.
-                    </p>
-                </div>
-                <div>
-                    <h5>PLANIFICACIÓN</h5>
-                    <p>
-                        Usted podrá observar y participar en cada fase del desarrollo y aplicación de soluciones.
-                    </p>
-                </div>
-                <div>
-                    <h5>TEGNOLOGÍA MODERNA</h5>
-                    <p>
-                        Usamos herramientas innovadoras para resolver las tareas asignadas. Es hora de simplificar los
-                        procesos laborales.
-                    </p>
-                </div>
+            <article>
+                <ul>
+                    <li>
+                        <h5>ATENCIÓN A LOS DETALLES</h5>
+                        <p>
+                            Nos adentramos en todos los detalles y procesos de su negocio, para así desarrollar una solución a su medida.
+                        </p>
+                    </li>
+                    <li>
+                        <h5>PUNTUALIDAD</h5>
+                        <p>
+                            Con nosotros, usted puede sentirse seguro y protegido. Un principio importante de la empresa: respetar su tiempo y respetar los plazos acordados.
+                        </p>
+                    </li>
+                    <li>
+                        <h5>PLANIFICACIÓN</h5>
+                        <p>
+                            Usted podrá observar y participar en cada fase del desarrollo y aplicación de soluciones.
+                        </p>
+                    </li>
+                    <li>
+                        <h5>TEGNOLOGÍA MODERNA</h5>
+                        <p>
+                            Usamos herramientas innovadoras para resolver las tareas asignadas. Es hora de simplificar los procesos laborales.
+                        </p>
+                    </li>
+                </ul>
             </article>
             <!-- A qué nos dedicamos -->
             <article>
                 <h2>A qué nos dedicamos</h2>
-                <img src="./Images/box1.jpg" alt="caja1" width="373.16px" height="323.7px">
-                <img src="./Images/box2.jpg" alt="caja2" width="373.16px" height="323.7px">
-                <img src="./Images/box3.jpg" alt="caja3" width="373.16px" height="323.7px">
-                </aheight="323.7px" <!-- equipo -->
-                <article>
-                    <h2>Nuestro equipo</h2>
-                    <img src="./Images/employee1.jpg" alt="tarjeta del equipo 1" width="270px" height="368px">
-                    <img src="./Images/employee2.jpg" alt="tarjeta del equipo 2" width="270px" height="368px">
-                    <img src="./Images/employee3.jpg" alt="tarjeta del equipo 3" width="270px" height="368px">
-                    <img src="./Images/employee4.jpg" alt="tarjeta del equipo 4" width="270px" height="368jp">
-                </article>
+                <ul>
+                    <li><img src="./images/box1.jpg" alt="caja1" width="373.16px" height="323.7px"></li>
+                    <li><img src="./images/box2.jpg" alt="caja2" width="373.16px" height="323.7px"></li>
+                    <li><img src="./images/box3.jpg" alt="caja3" width="373.16px" height="323.7px"></li>
+                </ul>
+            <!-- equipo -->
+            <article>
+                <h2>Nuestro equipo</h2>
+                <ul>
+                    <li><img src="./images/employee1.jpg" alt="tarjeta del equipo 1" width="270px" height="368px"></li>
+                    <li><img src="./images/employee2.jpg" alt="tarjeta del equipo 2" width="270px" height="368px"></li>
+                    <li><img src="./images/employee3.jpg" alt="tarjeta del equipo 3" width="270px" height="368px"></li>
+                    <li><img src="./images/employee4.jpg" alt="tarjeta del equipo 4" width="270px" height="368jp"></li>
+                </ul>
+            </article>
         </section>
     </main>
     <footer>
         <h3>WebStudio</h3>
         <div>
             <p>Calz. Ticomán 500, Ciudad de México, CDMX, México</p>
-            <address>
-                <a href="mailto:info@example.com">info@example.com</a>
-                <a href="tel:+525555296000">+52 55 5529 6000</a>
-            </address>
+            <a href="mailto:info@example.com">info@example.com</a>
+            <a href   =             "tel:+525555296000">+52 55 5529 6000</a>
         </div>
     </footer>
 </body>
-
 </html>
