--- a/index.html
+++ b/index.html
@@ -20,15 +20,14 @@
                 <li><a href="tel:+525555296000">+52 55 5529 6000</a></li>
             </ul>
         </nav>
+    </header>
+    <main>        
         <h1>SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
         <button type="button">
             solicite nuestro servicio
         </button>
-    </header>
-    <main>
         <section>
             <!-- Beneficios de trabajar con nosotros -->
-            <article>
                 <ul>
                     <li>
                         <h5>ATENCIÓN A LOS DETALLES</h5>
@@ -55,17 +54,18 @@
                         </p>
                     </li>
                 </ul>
-            </article>
             <!-- A qué nos dedicamos -->
-            <article>
+        </section>
+        <section>
                 <h2>A qué nos dedicamos</h2>
                 <ul>
                     <li><img src="./images/box1.jpg" alt="caja1" width="373.16px" height="323.7px"></li>
                     <li><img src="./images/box2.jpg" alt="caja2" width="373.16px" height="323.7px"></li>
                     <li><img src="./images/box3.jpg" alt="caja3" width="373.16px" height="323.7px"></li>
                 </ul>
+        </section>
+        <section>
             <!-- equipo -->
-            <article>
                 <h2>Nuestro equipo</h2>
                 <ul>
                     <li><img src="./images/employee1.jpg" alt="tarjeta del equipo 1" width="270px" height="368px"></li>
@@ -73,16 +73,13 @@
                     <li><img src="./images/employee3.jpg" alt="tarjeta del equipo 3" width="270px" height="368px"></li>
                     <li><img src="./images/employee4.jpg" alt="tarjeta del equipo 4" width="270px" height="368jp"></li>
                 </ul>
-            </article>
         </section>
     </main>
     <footer>
         <h3>WebStudio</h3>
-        <div>
             <p>Calz. Ticomán 500, Ciudad de México, CDMX, México</p>
             <a href="mailto:info@example.com">info@example.com</a>
-            <a href   =             "tel:+525555296000">+52 55 5529 6000</a>
-        </div>
+            <a href="tel:+525555296000">+52 55 5529 6000</a>
     </footer>
 </body>
 </html>
