--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@
                 <h5>Portafolio</h5>
                 <h5>Contactos</h5>
             </div>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+525555296000">+52 55 5529 6000</a></li>
-            </ul>
         </nav>
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a href="tel:+525555296000">+52 55 5529 6000</a>
     </header>
     <main>        
         <h1>SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
@@ -76,10 +74,14 @@
         </section>
     </main>
     <footer>
-        <h3>WebStudio</h3>
-            <p>Calz. Ticomán 500, Ciudad de México, CDMX, México</p>
-            <a href="mailto:info@example.com">info@example.com</a>
-            <a href="tel:+525555296000">+52 55 5529 6000</a>
+        <a>WebStudio</a>
+        <address>
+            <ul>
+                <li><p>Calz. Ticomán 500, Ciudad de México, CDMX, México</p></li>
+                <li><a href="mailto:info@example.com">info@example.com</a></li>
+                <li><a href="tel:+525555296000">+52 55 5529 6000</a></li>
+            </ul>
+        </address>
     </footer>
 </body>
 </html>
