--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </section>
     </main>
     <footer>
-        <a>WebStudio</a>
+        <a href="#">WebStudio</a>
         <address>
             <ul>
                 <li><p>Calz. Ticomán 500, Ciudad de México, CDMX, México</p></li>
