--- a/index.html
+++ b/index.html
@@ -9,21 +9,23 @@
 <body>
     <header>
         <nav>
-            <a href="#">WebStudio</a>
-            <div>
-                <h5>Estudio</h5>
-                <h5>Portafolio</h5>
-                <h5>Contactos</h5>
-            </div>
+            <p><a href="#">WebStudio</a></p>
+            <ul>
+                <li><a href="#" target="_blank" rel="noopener noreferrer">Estudio</a></li>
+                <li><a href="#" target="_blank" rel="noopener noreferrer">Portafolio</a></li>
+                <li><a href="#" target="_blank" rel="noopener noreferrer">Contactos</a></li>
+            </ul>
         </nav>
                 <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 <a href="tel:+525555296000">+52 55 5529 6000</a>
     </header>
-    <main>        
-        <h1>SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
-        <button type="button">
-            solicite nuestro servicio
-        </button>
+    <main>      
+        <section>
+            <h1>SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
+            <button type="button">
+                solicite nuestro servicio
+            </button>
+        </section>
         <section>
             <!-- Beneficios de trabajar con nosotros -->
                 <ul>
