--- a/index.html
+++ b/index.html
@@ -66,12 +66,28 @@
         </section>
         <section>
             <!-- equipo -->
+            <260
                 <h2>Nuestro equipo</h2>
-                <ul>
-                    <li><img src="./images/employee1.jpg" alt="tarjeta del equipo 1" width="270px" height="368px"></li>
-                    <li><img src="./images/employee2.jpg" alt="tarjeta del equipo 2" width="270px" height="368px"></li>
-                    <li><img src="./images/employee3.jpg" alt="tarjeta del equipo 3" width="270px" height="368px"></li>
-                    <li><img src="./images/employee4.jpg" alt="tarjeta del equipo 4" width="270px" height="368jp"></li>
+                    <li>
+                        <img src="./images/employee2.jpg" alt="tarjeta del equipo 2" width="270px" height="260px">
+                        <h3>Andrés Cubo</h3>
+                        <p>Diseñador de Productos</p>
+                    </li>
+                    <li>
+                        <img src="./images/employee1.jpg" alt="tarjeta del equipo 1" width="270px" height="260px">
+                        <h3>Carla Palacios</h3>
+                        <p>Desarrolladora Frontend</p>
+                    </li>
+                    <li>
+                        <img src="./images/employee3.jpg" alt="tarjeta del equipo 3" width="270px" height="260px">
+                        <h3>Mario Dorado</h3>
+                        <p>Marketing</p>
+                    </li>
+                    <li>
+                        <img src="./images/employee4.jpg" alt="tarjeta del equipo 4" width="270px" height="260px">
+                        <h3>Pablo Mijangos</h3>
+                        <p>Diseñador IU</p>
+                    </li>
                 </ul>
         </section>
     </main>
